GNOME Bugzilla – Bug 725559
Fix typo in gtk_window_set_default() documentation
Last modified: 2014-03-03 23:15:04 UTC
The documentation should link to gtk_widget_grab_default() rather than gtk_widget_grab_focus().
Created attachment 270768 [details] [review] Fix typo in gtk_window_set_default() documentation The documentation should link to gtk_widget_grab_default() rather than gtk_widget_grab_focus().
Review of attachment 270768 [details] [review]: sure, looks right
Attachment 270768 [details] pushed as 857e774 - Fix typo in gtk_window_set_default() documentation